# auto_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auto/lib/auto/: actuate  compute  sense
install/auto/share/auto/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/auto/: CMakeLists.txt
src/auto/include/auto/: Actuate.h  Actuate_private.h  Actuate_types.h  Compute.h  Compute_private.h  Compute_types.h  Sense.h
src/auto/launch/: auto.launch.py
src/auto/src/: Actuate.c  Compute.c  Sense.c  actuate_node.cpp  compute_node.cpp  sense_node.cpp
